fixed layout issues

--- a/styles.css
+++ b/styles.css
@@ -16,18 +16,21 @@ h3,
 h4,
 h5,
 h6 {
+  margin: 0;
   font-family: "Proza Libre", sans-serif;
 }
 h1 {
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 0.5rem;
 }
 
-h4 {
-  margin: 0;
+h3 {
+  margin-bottom: 1rem;
+  font-weight: normal;
 }
 p {
-  margin: 8px;
+  margin: 0;
+  line-height: 2rem;
 }
 a {
   color: inherit;
@@ -50,7 +53,7 @@ a:hover {
   display: flex;
 }
 .main-container {
-  height: calc(100vh - 2rem);
+  min-height: calc(100vh - 2rem);
   display: flex;
   flex-direction: column;
   align-items: center;
